force-app/main/default/objects/Discrepancy_Lot__c/Discrepancy_Lot__c.object-meta.xml
<CustomObject>
    <label>Discrepancy Lot</label>
    <nameField>
        <displayFormat>LOT-{00000}</displayFormat>
        <label>Discrepancy Lot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discrepancy Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>