force-app/main/default/objects/Discrepancy_Lot__c/fields/Address_of_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Consignee__c</fullName>
    <label>Address of Consignee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>River Factory</fullName>
            </value>
            <value>
                <fullName>River HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>