force-app/main/default/objects/Discrepancy_Lot__c/fields/Date_of_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Dispatch__c</fullName>
    <label>Date of Dispatch</label>
    <type>Date</type>
</CustomField>