force-app/main/default/objects/Discrepancy_Lot__c/fields/Lot_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lot_Created_Date__c</fullName>
    <label>Lot Created Date</label>
    <type>DateTime</type>
</CustomField>