force-app/main/default/objects/Discrepancy_Lot__c/fields/LR_Number__c.field-meta.xml
<CustomField>
    <fullName>LR_Number__c</fullName>
    <label>LR Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>