force-app/main/default/objects/Discrepancy_Lot__c/fields/Purpose_of_Sending__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Sending__c</fullName>
    <label>Purpose of Sending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>