force-app/main/default/objects/Discrepancy_Lot__c/validationRules/If_Status_is_Dispatched_LR_Number_Mandat.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Dispatched_LR_Number_Mandat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Dispatched&quot;),
    ISBLANK(LR_Number__c)
)</errorConditionFormula>
    <errorDisplayField>LR_Number__c</errorDisplayField>
    <errorMessage>Fill &apos;LR Number&apos; if status is Dispatched</errorMessage>
</ValidationRule>