force-app/main/default/objects/Discrepancy_Lot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mode_of_Transport__c</columns>
    <columns>Phone__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Discrepancy Lots</label>
</ListView>